@@ -150,6 +150,93 @@ $ mvn dependency:list | grep ':compile' | sort
 [INFO]    org.springframework:spring-webflux:jar:5.0.2.RELEASE:compile
 ```
 
+### Deploy to Cloud Foundry
+
+To make best use of small footprint, you can configure [Java Memory Calculator](https://github.com/cloudfoundry/java-buildpack-memory-calculator)
+
+Here is a example of `manifest.yml` that uses only 112Mb memory:
+
+``` yml
+applications:
+- name: fluxfn
+  buildpack: java_buildpack
+  memory: 112M
+  path: target/demo-fluxfn-1.0.0-SNAPSHOT.jar 
+  env:
+    JAVA_OPTS: '-XX:MaxMetaspaceSize=32M -XX:ReservedCodeCacheSize=32M -XX:CompressedClassSpaceSize=8M -XX:MaxDirectMemorySize=8M'
+    JBP_CONFIG_OPEN_JDK_JRE: '[memory_calculator: {stack_threads: 16}]'
+```
+
+Be careful that this configuration is well tuned for a tiny "Hello World" application.
+
+
+```
+$ mvn clean package
+$ java -jar target/demo-fluxfn-1.0.0-SNAPSHOT.jar
+$ cf push --random-route
+  Using manifest file /private/tmp/demo-fluxfn/demo-fluxfn/manifest.yml
+  
+  Updating app fluxfn in org myorg / space development as maki@example.com...
+  OK
+  
+  Uploading fluxfn...
+  Uploading app files from: /var/folders/15/fww24j3d7pg9sz196cxv_6xm4nvlh8/T/unzipped-app921204986
+  Uploading 214.5K, 78 files
+  Done uploading               
+  OK
+  
+  Starting app fluxfn in org myorg / space development as maki@example.com...
+  Downloading java_buildpack...
+  Downloaded java_buildpack
+  Creating container
+  Successfully created container
+  Downloading app package...
+  Downloaded app package (10.7M)
+  -----> Java Buildpack v4.5 (offline) | https://github.com/cloudfoundry/java-buildpack.git#ffeefb9
+  -----> Downloading Jvmkill Agent 1.10.0_RELEASE from https://java-buildpack.cloudfoundry.org/jvmkill/trusty/x86_64/jvmkill-1.10.0_RELEASE.so (found in cache)
+  -----> Downloading Open Jdk JRE 1.8.0_141 from https://java-buildpack.cloudfoundry.org/openjdk/trusty/x86_64/openjdk-1.8.0_141.tar.gz (found in cache)
+         Expanding Open Jdk JRE to .java-buildpack/open_jdk_jre (1.6s)
+  -----> Downloading Open JDK Like Memory Calculator 3.9.0_RELEASE from https://java-buildpack.cloudfoundry.org/memory-calculator/trusty/x86_64/memory-calculator-3.9.0_RELEASE.tar.gz (found in cache)
+         Loaded Classes: 12505, Threads: 16
+  -----> Downloading Client Certificate Mapper 1.2.0_RELEASE from https://java-buildpack.cloudfoundry.org/client-certificate-mapper/client-certificate-mapper-1.2.0_RELEASE.jar (found in cache)
+  -----> Downloading Container Security Provider 1.8.0_RELEASE from https://java-buildpack.cloudfoundry.org/container-security-provider/container-security-provider-1.8.0_RELEASE.jar (found in cache)
+  -----> Downloading Spring Auto Reconfiguration 1.12.0_RELEASE from https://java-buildpack.cloudfoundry.org/auto-reconfiguration/auto-reconfiguration-1.12.0_RELEASE.jar (found in cache)
+  Exit status 0
+  Uploading droplet, build artifacts cache...
+  Uploading build artifacts cache...
+  Uploading droplet...
+  Uploaded build artifacts cache (129B)
+  Uploaded droplet (57.1M)
+  Uploading complete
+  Stopping instance bce0ba8a-c5e3-4554-b893-e545801da7a8
+  Destroying container
+  Successfully destroyed container
+  
+  1 of 1 instances running
+  
+  App started
+  
+  
+  OK
+  
+  App fluxfn was started using this command `JAVA_OPTS="-agentpath:$PWD/.java-buildpack/open_jdk_jre/bin/jvmkill-1.10.0_RELEASE=printHeapHistogram=1 -Djava.io.tmpdir=$TMPDIR -Djava.ext.dirs=$PWD/.java-buildpack/container_security_provider:$PWD/.java-buildpack/open_jdk_jre/lib/ext -Djava.security.properties=$PWD/.java-buildpack/security_providers/java.security $JAVA_OPTS" && CALCULATED_MEMORY=$($PWD/.java-buildpack/open_jdk_jre/bin/java-buildpack-memory-calculator-3.9.0_RELEASE -totMemory=$MEMORY_LIMIT -stackThreads=16 -loadedClasses=13214 -poolType=metaspace -vmOptions="$JAVA_OPTS") && echo JVM Memory Configuration: $CALCULATED_MEMORY && JAVA_OPTS="$JAVA_OPTS $CALCULATED_MEMORY" && SERVER_PORT=$PORT eval exec $PWD/.java-buildpack/open_jdk_jre/bin/java $JAVA_OPTS -cp $PWD/. org.springframework.boot.loader.JarLauncher`
+  
+  Showing health and status for app fluxfn in org myorg / space development as maki@example.com...
+  OK
+  
+  requested state: started
+  instances: 1/1
+  usage: 112M x 1 instances
+  urls: fluxfn.cfapps.io
+  last uploaded: Thu Dec 21 12:05:41 UTC 2017
+  stack: cflinuxfs2
+  buildpack: java_buildpack
+  
+       state     since                    cpu    memory          disk           details
+  #0   running   2017-12-21 09:06:27 PM   0.3%   95.1M of 112M   135.7M of 1G
+```
+
+
 ### How to use `ApplicationContext`
 
 ``` diff
